Clean Code commentaires et ordre des modifiers  #54