@@ -3,13 +3,7 @@ package fr.unice.polytech.si3.qgl.Mugiwara_Cook.game;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import fr.unice.polytech.si3.qgl.Mugiwara_Cook.Sailor;
 import fr.unice.polytech.si3.qgl.Mugiwara_Cook.goal.Goal;
-import fr.unice.polytech.si3.qgl.Mugiwara_Cook.sea.Checkpoint;
 import fr.unice.polytech.si3.qgl.Mugiwara_Cook.ship.Ship;
-import fr.unice.polytech.si3.qgl.Mugiwara_Cook.ship.equipment.Equipment;
-import fr.unice.polytech.si3.qgl.Mugiwara_Cook.ship.equipment.Oar;
-import fr.unice.polytech.si3.qgl.Mugiwara_Cook.ship.equipment.Rudder;
-
-import fr.unice.polytech.si3.qgl.Mugiwara_Cook.ship.equipment.Sail;
 
 import lombok.Getter;
 import lombok.Setter;
@@ -46,21 +40,21 @@ public class InitGame {
 
     @JsonIgnore
     public List<Sailor> getUsableSailorLeft() {
-        return Arrays.asList(this.sailors).stream()
+        return Arrays.stream(this.sailors)
                 .filter(sailor -> sailor.getEquipment() != null)
                 .filter(sailor -> sailor.getEquipment().getType().equals("oar"))
                 .filter(sailor -> sailor.getEquipment().getY() == 0)
-                .filter(sailor -> sailor.onIsAssignEquipment())
+                .filter(Sailor::onIsAssignEquipment)
                 .collect(Collectors.toList());
     }
 
     @JsonIgnore
     public List<Sailor> getUsableSailorRight() {
-        return Arrays.asList(this.sailors).stream()
+        return Arrays.stream(this.sailors)
                 .filter(sailor -> sailor.getEquipment() != null)
                 .filter(sailor -> sailor.getEquipment().getType().equals("oar"))
                 .filter(sailor -> sailor.getEquipment().getY() == (this.ship.getDeck().getWidth() - 1))
-                .filter(sailor -> sailor.onIsAssignEquipment())
+                .filter(Sailor::onIsAssignEquipment)
                 .collect(Collectors.toList());
     }
 
@@ -88,21 +82,20 @@ public class InitGame {
     @JsonIgnore
     public Sailor getUsableSailorRudder() {
         if (this.sailorRudder()) {
-            return Arrays.asList(this.sailors).stream()
+            return Arrays.stream(this.sailors)
                     .filter(sailor -> sailor.getEquipment() != null)
                     .filter(sailor -> sailor.getEquipment().getType().equals("rudder"))
-                    .filter(sailor -> sailor.onIsAssignEquipment())
-                    .collect(Collectors.toList()).get(0);
+                    .filter(Sailor::onIsAssignEquipment).toList().get(0);
         } else
             return null;
     }
 
     @JsonIgnore
     public List<Sailor> getUsableSailorSail() {
-        return Arrays.asList(this.sailors).stream()
+        return Arrays.stream(this.sailors)
                 .filter(sailor -> sailor.getEquipment() != null)
                 .filter(sailor -> sailor.getEquipment().getType().equals("sail"))
-                .filter(sailor -> sailor.onIsAssignEquipment())
+                .filter(Sailor::onIsAssignEquipment)
                 .collect(Collectors.toList());
     }
 
